[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/raw/dialog-background.png" type="Texture" id=1]
[ext_resource path="res://src/DialogDisplayer.gd" type="Script" id=2]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=3]

[node name="DialogDisplay" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -192.0
margin_right = 512.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.25995
margin_top = -1.25989
margin_right = 1.26001
margin_bottom = -1.25989
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName" type="RichTextLabel" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 128.0
margin_bottom = 64.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterLine" type="RichTextLabel" parent="."]
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 0.0639992
margin_right = -20.0
margin_bottom = -20.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "ESTO ES UN TEXTO DE PRUEBA PARA EL SISTEMA DE DIALOGO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowContinue" type="AnimatedSprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = -1.292
anchor_right = 0.5
anchor_bottom = -1.292
margin_left = -256.0
margin_top = -135.936
margin_right = 256.0
margin_bottom = 120.064
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Control"]
margin_left = -208.0
margin_top = 40.0
margin_right = 352.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}
